--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*This code has been copied from FreeCodeCamp. Here's the link: https://www.freecodecamp.org/forum/t/freecodecamp-challenge-guide-create-a-gradual-css-linear-gradient/301047; */
+/*This code has been copied from FreeCodeCamp. Here's the link: https://www.freecodecamp.org/forum/t/freecodecamp-challenge-guide-create-a-gradual-css-linear-gradient/301047; 
 
    div{
     border-radius: 20px;
@@ -41,4 +41,103 @@
 
   a:hover
 
+*/
+
+/* A new background is being provided. Code copied via : https://www.freecodecamp.org/learn/responsive-web-design/applied-visual-design/make-a-css-heartbeat-using-an-infinite-animation-count
+*/
+
+.back {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    animation-name: backdiv;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+
+  }
+
+  .heart {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: pink;
+    height: 50px;
+    width: 50px;
+    transform: rotate(-45deg);
+    animation-name: beat;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+
+  }
+
+  .heart:after {
+    background-color: pink;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 0px;
+    left: 25px;
+  }
+
+  .heart:before {
+    background-color: pink;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -25px;
+    left: 0px;
+  }
+
+  @keyframes backdiv {
+    50% {
+      background: #ffe6f2;
+    }
+  }
+
+  @keyframes beat {
+    0% {
+      transform: scale(1) rotate(-45deg);
+    }
+    50% {
+      transform: scale(0.6) rotate(-45deg);
+    }
+  }
+/* I have to import the blue-class bit as well */
+  .Blue-text {
+    color: blue;
+    position: relative;
+    bottom: 2px;
+    top: 160px;
+    left: 16%;
+  }
+
+ /* have to import h2 tag from above/previous: */
+   h2 {
+    font-family: Lobster, monospace;
+  }
+
+  /* p2 tag has to be imported in order for the image to show */
+    p2 {
+    position: fixed;
+    bottom: 60px;
+    top: 228px;
+    left: 16%;
+  }
+
+/* Make image circular again. MICA */
+  img {
+  border-radius: 50%;
+}
 
