--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    /* commenting this background out, because I want the other background (below) to kick in:
     background: white;
+    */
     animation-name: backdiv;
     animation-duration: 1s;
     animation-iteration-count: infinite;
@@ -64,9 +66,9 @@
   .heart {
     position: absolute;
     margin: auto;
-    top: 0;
+    top: 10;
     right: 0;
-    bottom: 0;
+    bottom: 50;
     left: 0;
     background-color: pink;
     height: 50px;
@@ -140,4 +142,56 @@
   img {
   border-radius: 50%;
 }
+
+/* borrowing more code from free code camp 
+https://www.freecodecamp.org/learn/responsive-web-design/applied-visual-design/animate-elements-at-variable-rates
+*/
+
+
+.stars {
+    background-color: orange;
+    height: 20px;
+    width: 18px;
+    border-radius: 70%;
+    animation-iteration-count: infinite;
+  }
+
+  .star-1 {
+    margin-top: 5%;
+    margin-left: 80%;
+    animation-name: twinkle-1;
+    animation-duration: 1.3s;
+  }
+
+  .star-2 {
+    margin-top: 25%;
+    margin-left: 85%;
+    animation-name: twinkle-2;
+    animation-duration: 1.4s;
+  }
+
+  @keyframes twinkle-1 {
+    50% {
+      transform: scale(0.5);
+      opacity: 0.8;
+    }
+  }
+
+  @keyframes twinkle-2 {
+    20% {
+      transform: scale(0.5);
+      opacity: 0.5;
+    }
+  }
+
+  .back2 {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, #000099, #66c2ff, yellow, #ffeee6);
+  }
 
